<resources>
    <string name="navigation_drawer_open"> drawer open</string>
    <string name="navigation_drawer_close"> drawer close</string>
    <string name="app_name">Baset Novin</string>
    <string name="dialog_clear_output">Clear Output Messages?</string>
    <string name="dialog_clear_data">Clear Data Field?</string>
    <string name="OK">OK</string>
    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>
    <string name="connection_status">Connection Status</string>
    <string name="title_section1_i2c_terminal">Terminal</string>
    <string name="title_section2_pin_config">Display</string>
    <string name="title_section3_pin_functions">Retrieve</string>
    <string name="title_section4_serial_terminal">Serial Terminal</string>
    <string name="title_section5_help">Help</string>
    <string name="gp0">GP0</string>
    <string name="gp1">GP1</string>
    <string name="gp2">GP2</string>
    <string name="gp3">GP3</string>
    <string name="adcReadgp1">Read GP1</string>
    <string name="adcReadgp2">Read GP2</string>
    <string name="adcReadgp3">Read GP3</string>
    <string name="toggle_high">High</string>
    <string name="toggle_low">Low</string>
    <string name="read_all">Read All</string>
    <string name="write_all">Write All</string>
    <string-array name="operation_array">
        <item>I2C Write</item>
        <item>I2C Read</item>
        <item>SMBus Write</item>
        <item>SMBus Read</item>
    </string-array>
    <string-array name="pec_array">
        <item>PEC Off</item>
        <item>PEC On</item>
    </string-array>
    <string-array name="address_length_array">
        <item>8 bit Address</item>
        <item>7 bit Address</item>
    </string-array>
    <string-array name="speed_array">
        <item>100000 bps</item>
        
    </string-array>
    <string-array name="rate_array">
        <item>1 sc</item>
        <item>2 sc</item>
        <item>3 sc</item>
        <item>4 sc</item>
        <item>5 sc</item>
        <item>6 sc</item>
        <item>7 sc</item>
        <item>8 sc</item>
        <item>9 sc</item>
        <item>10 sc</item>
    </string-array>
    <string-array name="gp0_functions">
        <item>SSPND</item>
        <item>Output</item>
        <item>Input</item>
        <item>LED URX</item>
    </string-array>
    <string-array name="gp1_functions">
        <item>LED UTX</item>
        <item>Output</item>
        <item>Input</item>
        <item>CLK OUT</item>
        <item>ADC1</item>
        <item>IOC</item>
    </string-array>
    <string-array name="gp2_functions">
        <item>USBCFG</item>
        <item>Output</item>
        <item>Input</item>
        <item>ADC2</item>
        <item>DAC1</item>
    </string-array>
    <string-array name="gp3_functions">
        <item>LED I2C</item>
        <item>Output</item>
        <item>Input</item>
        <item>ADC3</item>
        <item>DAC2</item>
    </string-array>
    <string-array name="output_levels">
        <item>High</item>
        <item>Low</item>
    </string-array>
    <string-array name="gp_read_write">
        <item>Read</item>
        <item>Write</item>
    </string-array>
    <string-array name="vref">
        <item>Vdd</item>
        <item>1.024V</item>
        <item>2.048V</item>
        <item>4.096V</item>
    </string-array>
    <string-array name="dutyCycle">
        <item>0 %</item>
        <item>25 %</item>
        <item>50 %</item>
        <item>75 %</item>
    </string-array>
    <string-array name="frequency">
        <item>24 MHz</item>
        <item>12 MHz</item>
        <item>6 MHz</item>
        <item>3 MHz</item>
        <item>1.5 MHz</item>
        <item>750 kHz</item>
        <item>375 kHz</item>
    </string-array>
    <string-array name="baudrate">
        <item>300</item>
        <item>600</item>
        <item>1200</item>
        <item>2400</item>
        <item>4800</item>
        <item>9600</item>
        <item>14400</item>
        <item>19200</item>
        <item>38400</item>
        <item>56000</item>
        <item>57600</item>
        <item>115200</item>
    </string-array>
    <string-array name="comOutputFormat">
        <item>ASCII</item>
        <item>Hex</item>
    </string-array>
    <string-array name="helpItems">
        <item>I2C/SMBus Terminal</item>
        <item>Pin Configuration</item>
        <item>Pin Functions</item>
        <item>Serial Terminal</item>
        <item>Known Issues</item>
    </string-array>
    <string name="address">Address</string>
    <string name="reg_index">Reg Index</string>
    <string name="send">Send</string>
    <string name="data">Data</string>
    <string name="output">Output</string>
    <string name="configure">Configure</string>
    <string name="help_i2c_terminal">        \n  <b>1) <u>Connection Status </u></b> \n
            The light indicates if a MCP2221 is connected. \n  <i>RED</i> = MCP2221 not connected \n  <i>GREEN</i> = MCP2221 connected \n\n  <b>2) <u>Operation Selection </u></b> \n
            Select the desired operation. Available options are: \n  <i>  - I2C Write </i> \n  <i>  - I2C Read </i> \n <i>  - SMBus Write </i>\n  <i>  - SMBus Read </i>\n\n <b>3) <u>Address Length</u></b> \n
             Select if the slave address is 7 or 8 bits in length.\n
             For 8 bit addresses, the R/W bit is automatically configured according to the selected operation.\n\n  <b>4) <u>Slave Address</u></b> \n
             The address for the I2C/SMBus slave that the MCP2221 will communicate with. The address is a hex number 
             between 0 - FF (for 8bit addresses) or between 0 - 7F (for 7bit addresses). \n
             For 8 bit addresses, the R/W bit is automatically configured according to the selected operation; 
             there is no need to manually change it.\n\n  <b>5) <u>Register Index</u></b> \n
             This field is used only for SMBus communication and specifies the register address on which 
             the operation will take place. \n\n  <b>6) <u>PEC Selection</u></b> \n
             The PEC (PACKET ERROR CHECK) field is used for SMBus only and will enable/disable 
             the error checking for SMBus packets. \n\n  <b>7) <u>Communication Speed</u></b> \n
            This option is used to select the communication speed between 100 kbps or 400 kbps.\n\n   <b>8) <u>Send Button</u></b> \n
            Send the command to the MCP2221.\n\n  <b>9) <u>Data Field</u></b> \n
          The content of this field varies depending on the selected Operation. \n\n
		  For an I2C/SMBus “Read” operation, the data field will contain a single hex value, specifying the number of 
		  bytes that will be read from the slave. Accepted values are between 1 and FFFF (65535) for I2C reads or SMBus Reads with 
		  PEC Off, or from 1 to FFFE (65534) for SMBus reads with PEC On.  \n\n
		  
		  For an I2C/SMBus “Write” operation, the data field will contain the data bytes that will be sent to the 
		  slave. Values are hexadecimal and should be separated by commas.\n\n  <b>10) <u>Output</u></b> \n
    		  The Output field contains the communication results. The error codes are the same as the ones for the 
    		  MCP2221 Windows DLL. \n
    		  This field can be cleared by long pressing it and selecting \"OK\" for the dialog that appears.\n\n 
    		    <b><u>Release Notes</u></b> \n
		  v2.0\n
		   Added support for:
            - ADC, DAC, Clock Out, GPIO\n
            - Serial communication\n\n
		  v1.0\n
		   - Initial release\n\n
		  
		  For more information please see:\n
		  http://www.microchip.com/mcp2221  </string>
    <string name="help_pin_configuration"> \n
	This page provides access to the MCP2221\'s GPIO settings. If a MCP2221 is connected when this page
         is visible its settings will be read and the page updated. \n\n 
<b>1) <u>Pin Function Selection </u></b> \n
            This drop down menu allows setting the desired function for all of the four GPIO pins. \n
            Available functions are:\n
            GPO: \n 
			<i>  - SSPND </i>– (OUT) Signals when the host has entered Suspend mode \n 
			<i>  - LED_URX </i>– (OUT) UART RX Led activity output \n 
			<i>  - Digital Output</i> \n 
			<i>  - Digital Input</i> \n\n
            GP1: \n 
			<i>  - Clock Out </i>- Clock Reference Output \n <i>  - ADC1</i> – (IN) ADC Channel 1  \n <i>  - LED_UTX</i> – (OUT) UART TX Led activity output \n <i>  - IOC </i>– (IN) External interrupt edge detector\n <i>  - Digital Output</i> \n <i>  - Digital Input</i> \n\n
            GP2: \n <i>  - USBCFG </i>– (OUT) USB device configured status \n <i>  - ADC2 </i>– (IN) ADC Channel 2 \n <i>  - DAC1 </i>– (OUT) DAC Output 1 \n <i>  - Digital Output</i> \n <i>  - Digital Input</i> \n\n
            GP3: \n <i>  - LED_I2C</i> – (OUT) USB-I2C traffic indicator \n <i>  - ADC3 </i>– (IN) ADC Channel 3 \n <i>  - DAC2 </i>– (OUT) DAC Output 1 \n <i>  - Digital Output</i> \n <i>  - Digital Input</i> \n\n
			
			<b>2) <u>Pin Value Selection </u></b> \n
			For pins configured as digital outputs this drop down menu allows setting the desired level of the pin (High/Low).\n\n
			
			<b>3) <u>Configure </u></b> \n
			This button will configure a connected MCP2221 with the selected settings for the GPIO pins. The settings only 
affect the runtime configuration and will be discarded after the MCP2221 is reset.  
			</string>
    <string name="help_pin_functions_adc">\n
	This section provides control for the pins that are configured as analog inputs.\n\n
	<b>1) <u>Voltage Reference Settings </u></b> \n
	The drop down menu allows setting the voltage reference for the ADC pins. The new value is configured when the "Set" button is pressed.\n\n
	
	<b>2) <u>ADC Read Section </u></b> \n
	If a pin is configured as an analog input then its value can be read by pressing the corresponding "Read GP" button. \n
	Pressing the "Read All" button will read all pins configured for the ADC function.\n\n
	
	<b>3) <u>ADC values</u></b> \n
	This area will contain the values read from the ADC pins.
	</string>
    <string name="help_pin_functions_clock">\n
	<b>1) <u>Duty Cycle selection</u></b> \n
	This drop down menu allows setting the duty cycle value for the signal that will be output on the Clock Out pin.\n\n
	
	<b>2) <u>Frequency selection </u></b> \n
	This drop down menu allows setting the frequency of the signal that will be output on the Clock Out pin.\n\n
	
	<b>3) <u>Set Clock Out Configuration </u></b> \n
	Pressing this button will update the settings for the Clock Out pin with the values selected from the drop down menus. 
	The button is only active if GP1 has been configured for the clock out function.
	</string>
    <string name="help_pin_functions_dac">\n
	<b>1) <u>Voltage Reference Settings </u></b> \n
	The drop down menu allows setting the voltage reference for the DAC pins. The new value is configured when the "Set Vref" button is pressed.\n\n
	
	<b>2) <u>DAC Value settings</u></b> \n
	This slider is used to configure the voltage that will be output on the pins configured as DAC outputs. The value on the pin(s) is updated when the "Set Value" button is pressed. If no pin is configured for DAC functionality this button is disabled.\n\n
	
	</string>
</resources>