<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/lblGp0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="25dp"
        android:text="@string/gp0"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinner_gp0_functions"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/lblGp0"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/lblGp0"
        android:entries="@array/gp0_functions" />

    <Spinner
        android:id="@+id/spinner_gp0_levels"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/spinner_gp0_functions"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/spinner_gp0_functions"
        android:entries="@array/output_levels" />

    <TextView
        android:id="@+id/lblGp1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_gp0_functions"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@+id/spinner_gp0_functions"
        android:text="@string/gp1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinner_gp1_functions"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/lblGp1"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/lblGp1"
        android:entries="@array/gp1_functions" />

    <Spinner
        android:id="@+id/spinner_gp1_levels"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/spinner_gp1_functions"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/spinner_gp1_functions"
        android:entries="@array/output_levels" />

    <TextView
        android:id="@+id/lblGp2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_gp1_functions"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@+id/spinner_gp0_functions"
        android:text="@string/gp2"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinner_gp2_functions"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/lblGp2"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/lblGp2"
        android:entries="@array/gp2_functions" />

    <Spinner
        android:id="@+id/spinner_gp2_levels"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/spinner_gp2_functions"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/spinner_gp2_functions"
        android:entries="@array/output_levels" />

    <TextView
        android:id="@+id/lblGp3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_gp2_functions"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:layout_toLeftOf="@+id/spinner_gp0_functions"
        android:text="@string/gp3"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Spinner
        android:id="@+id/spinner_gp3_functions"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/lblGp3"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/lblGp3"
        android:entries="@array/gp3_functions" />

    <Spinner
        android:id="@+id/spinner_gp3_levels"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/spinner_gp3_functions"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@+id/spinner_gp3_functions"
        android:entries="@array/output_levels" />

    <Button
        android:id="@+id/btn_configure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="34dp"
        android:text="@string/configure" />

</RelativeLayout>